add color and fonts in header

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-
+  
   <header id="intro">
     <div class="info">
       <div class="header">
-        
+        <img src="./Assets/images/Image.png" alt="">
+        <p>Hello World! Meu nome é <span>Martina Santos</span> e sou</p>
+        <h1>Desenvolvedora Fullstack</h1>
+        <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
       </div>
     </div>
   </header>
