--- a/index.html
+++ b/index.html
@@ -70,6 +70,47 @@
       <path d="M27.0612 15.9388C27.201 16.0781 27.312 16.2437 27.3877 16.426C27.4634 16.6084 27.5024 16.8038 27.5024 17.0013C27.5024 17.1987 27.4634 17.3942 27.3877 17.5765C27.312 17.7588 27.201 17.9244 27.0612 18.0638L17.0612 28.0638C16.9218 28.2036 16.7563 28.3146 16.5739 28.3903C16.3916 28.466 16.1961 28.5049 15.9987 28.5049C15.8013 28.5049 15.6058 28.466 15.4235 28.3903C15.2411 28.3146 15.0756 28.2036 14.9362 28.0638L4.9362 18.0638C4.79667 17.9242 4.68599 17.7586 4.61047 17.5763C4.53496 17.394 4.49609 17.1986 4.49609 17.0013C4.49609 16.8039 4.53496 16.6085 4.61047 16.4262C4.68599 16.2439 4.79667 16.0783 4.9362 15.9388C5.07573 15.7992 5.24137 15.6885 5.42367 15.613C5.60598 15.5375 5.80137 15.4987 5.9987 15.4987C6.19602 15.4987 6.39141 15.5375 6.57372 15.613C6.75602 15.6885 6.92167 15.7992 7.0612 15.9388L15.9999 24.875L24.9387 15.935C25.0782 15.7958 25.2439 15.6854 25.4261 15.6103C25.6083 15.5351 25.8036 15.4966 26.0007 15.497C26.1978 15.4973 26.393 15.5365 26.5749 15.6123C26.7569 15.6881 26.9221 15.799 27.0612 15.9388ZM14.9362 18.0638C15.0756 18.2036 15.2411 18.3146 15.4235 18.3903C15.6058 18.466 15.8013 18.5049 15.9987 18.5049C16.1961 18.5049 16.3916 18.466 16.5739 18.3903C16.7563 18.3146 16.9218 18.2036 17.0612 18.0638L27.0612 8.06376C27.2007 7.92423 27.3114 7.75858 27.3869 7.57628C27.4624 7.39398 27.5013 7.19858 27.5013 7.00126C27.5013 6.80393 27.4624 6.60854 27.3869 6.42624C27.3114 6.24393 27.2007 6.07829 27.0612 5.93876C26.9217 5.79923 26.756 5.68855 26.5737 5.61304C26.3914 5.53752 26.196 5.49866 25.9987 5.49866C25.8014 5.49866 25.606 5.53752 25.4237 5.61304C25.2414 5.68855 25.0757 5.79923 24.9362 5.93876L15.9999 14.875L7.0612 5.93876C6.7794 5.65697 6.39721 5.49866 5.9987 5.49866C5.60018 5.49866 5.21799 5.65697 4.9362 5.93876C4.6544 6.22055 4.49609 6.60274 4.49609 7.00126C4.49609 7.39977 4.6544 7.78197 4.9362 8.06376L14.9362 18.0638Z" fill="currentColor"/>
     </svg>
   </header>
+
+  <section id="projects">
+    <header id="work">
+      <p>Meu trabalho</p>
+      <h3>Veja os projetos em destaque</h3>
+    </header>
+
+    <div class="grid grid-columns">
+      <span class="travel">
+        <img src="./Assets/images/Thumbnail_Project-01.png" alt="">
+        <strong>Travelgram</strong>
+        <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo.</p>
+      </span>
+      <span class="tech">
+        <img src="./Assets/images/Thumbnail_Project-02.png" alt="">
+        <strong>Tech News</strong>
+        <p>Homepage de um portal de notícias sobre a área de tecnologia.</p>
+      </span>
+      <span class="page">
+        <img src="./Assets/images/Thumbnail_Project-03.png" alt="">
+        <strong>Página de receita</strong>
+        <p>Página com o passo a passo de uma receita para cupcakes.</p>
+      </span>
+      <span class="zin">
+        <img src="./Assets/images/Thumbnail_Project-04.png" alt="">
+        <strong>Zingen</strong>
+        <p>Landing Page completa e responsiva de um aplicativo de Karaokê.</p>
+      </span>
+      <span class="refund">
+        <img src="./Assets/images/Thumbnail_Project-05.png" alt="">
+        <strong>Refund</strong>
+        <p>Um sistema para pedido e acompanhamento de reembolso.</p>
+      </span>
+      <span class="turi">
+        <img src="./Assets/images/Thumbnail_Project-06.png" alt="">
+        <strong>Página de turismo</strong>
+        <p>Página com as principais informações para quem quer viajar para Busan.</p>
+      </span>
+    </div>
+
+  </section>
   
 </body>
 </html>
