inicial section services and more utilitys

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </header>
 
   <section id="projects">
-    <header id="work">
+    <header class="work">
       <p>Meu trabalho</p>
       <h3>Veja os projetos em destaque</h3>
     </header>
@@ -110,6 +110,31 @@
       </span>
     </div>
 
+  </section>
+
+  <section id="services">
+    <header class="work">
+      <p>Meus Serviços</p>
+      <h3>Como posso ajudar seu negócio</h3>
+    </header>
+
+    <div class="grid grid-areas">
+      <span class="web">
+        <img src="./Assets/icons/Devices.svg" alt="">
+        <strong>Websites e Aplicativos</strong>
+        <p>Desenvolvimento de interfaces</p>
+      </span>
+      <span class="api">
+        <img src="./Assets/icons/HardDrives.svg" alt="">
+        <strong>API e banco de dados</strong>
+        <p>Criação de serviços do sistema</p>
+      </span>
+      <span class="dev">
+        <img src="./Assets/icons/Infinity.svg" alt="">
+        <strong>DevOps</strong>
+        <p>Gestão e infraestrutura da aplicação</p>
+      </span>
+    </div>
   </section>
   
 </body>
