finish section services

--- a/index.html
+++ b/index.html
@@ -78,32 +78,32 @@
     </header>
 
     <div class="grid grid-columns">
-      <span class="travel">
+      <span class="travel text-span">
         <img src="./Assets/images/Thumbnail_Project-01.png" alt="">
         <strong>Travelgram</strong>
         <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo.</p>
       </span>
-      <span class="tech">
+      <span class="tech text-span">
         <img src="./Assets/images/Thumbnail_Project-02.png" alt="">
         <strong>Tech News</strong>
         <p>Homepage de um portal de notícias sobre a área de tecnologia.</p>
       </span>
-      <span class="page">
+      <span class="page text-span">
         <img src="./Assets/images/Thumbnail_Project-03.png" alt="">
         <strong>Página de receita</strong>
         <p>Página com o passo a passo de uma receita para cupcakes.</p>
       </span>
-      <span class="zin">
+      <span class="zin text-span">
         <img src="./Assets/images/Thumbnail_Project-04.png" alt="">
         <strong>Zingen</strong>
         <p>Landing Page completa e responsiva de um aplicativo de Karaokê.</p>
       </span>
-      <span class="refund">
+      <span class="refund text-span">
         <img src="./Assets/images/Thumbnail_Project-05.png" alt="">
         <strong>Refund</strong>
         <p>Um sistema para pedido e acompanhamento de reembolso.</p>
       </span>
-      <span class="turi">
+      <span class="turi text-span">
         <img src="./Assets/images/Thumbnail_Project-06.png" alt="">
         <strong>Página de turismo</strong>
         <p>Página com as principais informações para quem quer viajar para Busan.</p>
@@ -119,17 +119,17 @@
     </header>
 
     <div class="grid grid-areas">
-      <span class="web">
+      <span class="web text-span">
         <img src="./Assets/icons/Devices.svg" alt="">
         <strong>Websites e Aplicativos</strong>
         <p>Desenvolvimento de interfaces</p>
       </span>
-      <span class="api">
+      <span class="api text-span">
         <img src="./Assets/icons/HardDrives.svg" alt="">
         <strong>API e banco de dados</strong>
         <p>Criação de serviços do sistema</p>
       </span>
-      <span class="dev">
+      <span class="dev text-span">
         <img src="./Assets/icons/Infinity.svg" alt="">
         <strong>DevOps</strong>
         <p>Gestão e infraestrutura da aplicação</p>
