finish aside contacts

--- a/index.html
+++ b/index.html
@@ -136,6 +136,22 @@
       </span>
     </div>
   </section>
+
+  <aside id="contact">
+    <header class="final">
+      <p>Contato</p>
+      <h3>Gostou do meu trabalho?</h3>
+      <p>Entre em contato ou acompanhe minhas redes sociais!</p>
+    </header>
+    <div class="links">
+      <ul>
+        <li><img src="./Assets/icons/LinkedinLogo.svg" alt=""><a href="#">Linkedin</a><img class="end" src="./Assets/icons/ArrowUpRight.svg" alt=""></li>
+        <li><img src="./Assets/icons/InstagramLogo.svg" alt=""><a href="#">Instagram</a><img class="end" src="./Assets/icons/ArrowUpRight.svg" alt=""></li>
+        <li><img src="./Assets/icons/GithubLogo.svg" alt=""><a href="#">GitHub</a><img class="end" src="./Assets/icons/ArrowUpRight.svg" alt=""></li>
+        <li><img src="./Assets/icons/EnvelopeSimple.svg" alt=""><a href="#">E-mail</a><img class="end" src="./Assets/icons/ArrowUpRight.svg" alt=""></li>
+      </ul>
+    </div>
+  </aside>
   
 </body>
 </html>
