--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   <header id="intro">
     <div class="info">
       <div class="header">
-        <img src="./Assets/images/Image.png" alt="">
+        <div class="profile">
+          <img class="img-base" src="./Assets/images/Image.png" alt="">
+          <img class="img-top" src="./Assets/icons/Code.svg" alt="">
+        </div>
         <p>Hello World! Meu nome é <span>Martina Santos</span> e sou</p>
         <h1>Desenvolvedora Fullstack</h1>
         <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
